--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -b master -d public",
+    "deploy": "gatsby build && gh-pages -b master -d public"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
